* Tonnes of documentation for most methods.

== 0.0.5

* Easy accessors for some methods
* Faster CSV loading.
* Changed vector #is\_valid? to #exists?
* Revamped dtype specifiers for Vector. Now specify :array/:nmatrix for changing underlying data implementation. Specigfy nm\_dtype for specifying the data type of the NMatrix object.
* #sort for Vector. Quick sort algorithm with preservation of original indexes.
* Removes #re\_index and #to\_index from Daru::Index.
* Ability to change the index of Vector and DataFrame with #reindex/#reindex!.
* Multi-level #sort! and #sort for DataFrames. Preserves indexing.
* All vector statistics now work with NMatrix as the underlying data type.
* Vectors keep a record of all positions with nils with #nil\_positions.
* Know whether a position has nils or not with #is_nil?
* Added #clone_structure to Vector for cloning only the index and structure or a vector.
* Figure out the type of data using #type. Running thru the data to determine its type is delayed till the last possible moment.
* Added arithmetic operations between data frame and scalars or other data frames.
* Added #map_vectors!.
* Create a DataFrame from Array of Arrays and Array of Vectors.
* Refactored DataFrame.rows and the  DataFrame constructor.
* Added hierarchial indexing to Vector and DataFrame with MultiIndex.
* Convert DataFrame to ruby Matrix or NMatrix with #to\_matrix and #to\_nmatrix.
* Added #group_by to DataFrame for grouping rows according to elements in a given column. Works similar to SQL GROUP BY, only much simpler.
* Added new class Daru::Core::GroupBy for supporting various grouping methods like #head, #tail, #get\_group, #size, #count, #mean, #std, #min, #max.
* Tranpose indexed/multi-indexed DataFrame with #transpose.
* Convert Daru::Vector to horizontal or vertical Ruby Matrix with #to_matrix.
* Added shortcut to DataFrame to allow access of vectors by using only #[] instead of calling #vector or *[vector_names, :vector]*.